# cppbase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/benchmark_results_20260624_100135/: epoll.csv  poll.csv  select.csv
data/benchmark_results_20260624_111015/: epoll.csv  poll.csv  select.csv
doc/: hstring_PR.md  ioMultiplexing_PR.md  unique_ptr_PR.md
include/mystl/: hstring.hpp  unique_ptr.hpp
script/: hstring_Plot.py  ioMultiPlexing_Plot.py  ioMultiplexing_Benchmark.sh
test/: CMakeLists.txt  array.cpp  bitlamp.cpp  bitop.cpp  hstring_benchmark.cpp  iomultiplexing.cpp  memory.cpp  oop.cpp  str.cpp  unique_ptr_benchmark.cpp  unique_ptr_gtest.cpp
